--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,16 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/ui": "^2.19.2",
+    "@types/ws": "^8.5.13",
+    "@vueuse/core": "^11.2.0",
     "nuxt": "^3.14.159",
     "vue": "latest",
     "vue-router": "latest",
     "ws": "^8.18.0"
+  },
+  "devDependencies": {
+    "@vueuse/nuxt": "^11.2.0"
   },
   "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
