fix backend dockerfile

--- a/backend/DezibotDebugInterface.Api/Dockerfile
+++ b/backend/DezibotDebugInterface.Api/Dockerfile
@@ -8,7 +8,7 @@ FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["backend/DezibotDebugInterface.Api/DezibotDebugInterface.Api.csproj", "DezibotDebugInterface.Api/"]
-RUN dotnet restore "backend/DezibotDebugInterface.Api/DezibotDebugInterface.Api.csproj"
+RUN dotnet restore "DezibotDebugInterface.Api/DezibotDebugInterface.Api.csproj"
 COPY ["backend/DezibotDebugInterface.Api/", "DezibotDebugInterface.Api/"]
 WORKDIR "/src/DezibotDebugInterface.Api"
 RUN dotnet build "DezibotDebugInterface.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
