adapt new models, migrate to one update endpoint, add new tests and add persistence with SQLite

--- a/backend/DezibotDebugInterface.Api/appsettings.json
+++ b/backend/DezibotDebugInterface.Api/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Microsoft.AspNetCore.SignalR": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DezibotSQLite": "Data Source=Dezibot.db"
+  }
 }
