set lastConnection with request timestamp and reduce logging

--- a/backend/DezibotDebugInterface.Api/appsettings.json
+++ b/backend/DezibotDebugInterface.Api/appsettings.json
@@ -1,9 +1,9 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Information",
-      "Microsoft.Microsoft.AspNetCore.SignalR": "Information"
+      "Default": "Warning",
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.Microsoft.AspNetCore.SignalR": "Warning"
     }
   },
   "AllowedHosts": "*",
