--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@microsoft/signalr": "^8.0.7",
     "@nuxt/ui": "^2.19.2",
     "@types/ws": "^8.5.13",
     "@vueuse/core": "^11.2.0",
