i dont even know anymore

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@
     name: dezibot-network
 
 services:
-  dezibotdebuginterface.api:
-    image: dezibotdebuginterface.api:latest
+  dezibotdebuginterfaceapi:
+    image: dezibotdebuginterfaceapi:latest
     container_name: dezibotdebuginterface.api
     build:
       context: .
@@ -16,21 +16,21 @@ services:
     networks:
       - default
 
-  dezibotdebuginterface.frontend:
-    image: dezibotdebuginterface.web:latest
-    container_name: dezibotdebuginterface.web
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    ports:
-      - "3000:3000"
-    environment:
-      - NODE_ENV=development
-      - DEZIBOT_HUB=http://dezibotdebuginterface.api:8080/dezibot-hub # Websocket connection to the backend
-    depends_on:
-      - dezibotdebuginterface.api
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules # Prevent overwriting node_modules in the container
-    networks:
-      - default
+  # dezibotdebuginterface.frontend:
+  #   image: dezibotdebuginterfaceweb:latest
+  #   container_name: dezibotdebuginterface.web
+  #   build:
+  #     context: ./frontend
+  #     dockerfile: Dockerfile
+  #   ports:
+  #     - "3000:3000"
+  #   environment:
+  #     - NODE_ENV=development
+  #     - DEZIBOT_HUB=http://dezibotdebuginterfaceapi:8080/dezibot-hub # Websocket connection to the backend
+  #   depends_on:
+  #     - dezibotdebuginterfaceapi
+  #   volumes:
+  #     - ./frontend:/app
+  #     - /app/node_modules # Prevent overwriting node_modules in the container
+  #   networks:
+  #     - default
