--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,11 @@
     "@nuxt/ui": "^2.19.2",
     "@types/ws": "^8.5.13",
     "@vueuse/core": "^11.2.0",
+    "chart.js": "^4.4.7",
     "nuxt": "^3.14.159",
-    "vue": "latest",
-    "vue-router": "latest",
+    "vue": "^3.5.13",
+    "vue-chartjs": "^5.3.2",
+    "vue-router": "^4.5.0",
     "ws": "^8.18.0"
   },
   "devDependencies": {
