--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-﻿networks: # Define a network to allow the containers to communicate with each other using their service names
+﻿networks:
   default:
     name: dezibot-network
 
@@ -11,7 +11,7 @@ services:
       dockerfile: backend/DezibotDebugInterface.Api/Dockerfile
     environment:
       ASPNETCORE_ENVIRONMENT: Development
-      CORS_ALLOWED_ORIGIN: http://dezibotdebuginterface.frontend:3000
+      CORS_ALLOWED_ORIGIN: http://dezibotdebuginterface.web:3000
     ports:
       - "5160:8080"
     networks:
@@ -23,15 +23,12 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
-    ports:
-      - "3000:3000"
     environment:
       - NODE_ENV=development
-      - BACKEND_URL=http://dezibotdebuginterface.api:8080
-    depends_on:
-      - dezibotdebuginterface.api
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules # Prevent overwriting node_modules in the container
+      - BACKEND_URL=http://dezibotdebuginterface.api:8080 # TODO: Fix the connection to the backend 
+    ports:
+      - "3000:3000"
     networks:
       - default
+    depends_on:
+      - dezibotdebuginterface.api
