--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       dockerfile: Dockerfile
     environment:
       - NODE_ENV=development
-      - BACKEND_URL=http://dezibotdebuginterface.api:8080 # TODO: Fix the connection to the backend 
+      - BACKEND_URL=http://dezibotdebuginterface.api:8080 # TODO: Fix CORS for production
     ports:
       - "3000:3000"
     networks:
