--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,16 +12,19 @@
   "dependencies": {
     "@microsoft/signalr": "^8.0.7",
     "@nuxt/ui": "^2.19.2",
+    "@nuxtjs/i18n": "^9.1.1",
     "@types/ws": "^8.5.13",
     "@vueuse/core": "^11.2.0",
     "chart.js": "^4.4.7",
     "nuxt": "^3.14.159",
+    "vite": "^6.0.11",
     "vue": "^3.5.13",
     "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.0",
     "ws": "^8.18.0"
   },
   "devDependencies": {
+    "typescript": "^5.7.3",
     "@vueuse/nuxt": "^11.2.0"
   },
   "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
