--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,7 @@ services:
       context: .
       dockerfile: backend/DezibotDebugInterface.Api/Dockerfile
     environment:
-      ASPNETCORE_ENVIRONMENT: Development
-      CORS_ALLOWED_ORIGIN: http://dezibotdebuginterface.web:3000
+      ASPNETCORE_ENVIRONMENT: Production
     ports:
       - "5160:8080"
     networks:
@@ -24,8 +23,8 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     environment:
-      - NODE_ENV=development
-      - BACKEND_URL=http://dezibotdebuginterface.api:8080 # TODO: Fix CORS for production
+      - NODE_ENV=production
+      - BACKEND_URL=http://dezibotdebuginterface.api:8080
     ports:
       - "3000:3000"
     networks:
