--- a/frontend/.dockerignore
+++ b/frontend/.dockerignore
@@ -16,7 +16,6 @@
 **/charts
 **/docker-compose*
 **/Dockerfile*
-**/node_modules
 **/npm-debug.log
 **/obj
 **/secrets.dev.yaml
@@ -26,3 +25,8 @@
 **/coverage
 LICENSE
 README.md
+/.nuxt
+/.output
+/node_modules
+
+.gitignore
